[package]
name = "vision-workshop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "vision"
path = "src/lib.rs"

[dependencies]
# Needed only for GUI apps
egui = { version = "0.19.0", optional = true }
eframe = { version = "0.19.0", optional = true }
egui_extras = { version = "0.19.0", optional = true }
clap = { version = "4.1", features = ["derive"] }

# -- Needed for everything --
# Image library
image = { version = "0.24" }
imageproc = { version = "0.23" }

# Math library
nalgebra = { version = "0.31" }

# April Tag library
apriltag = { git = "https://github.com/james-womack/apriltag-rust", branch = "master", features = ["full"] }

# Needed to initialize channel between two threads
once_cell = "^1.16"

# Serialization/Deserialization of configuration values
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.4.2"

# Error library
thiserror = "1.0"

# Parking Lot for Mutexes without Poisoning
parking_lot = "0.12"

# Crossbeam-channels for best performance
crossbeam-channel = "0.5"

[dependencies.nokhwa]
#git = "https://github.com/l1npengtul/nokhwa"
#branch = "senpai"
version = "0.10.3"
features = ["input-native", "output-threaded"]

[features]
default = ["gui"]
gui = ["egui", "eframe", "egui_extras"]


[[bin]]
name = "webcam"
path = "src/webcam.rs"
required-features = ["gui"]